# oxidized-patterns

./: BeeMovieScript.txt  Cargo.toml  README.md  build.rs  generate_random_data.py
benches/: throughput.rs
shaders/: shift_and_dist.metal
shift_and.xcodeproj/: project.pbxproj
shift_and.xcodeproj/xcshareddata/xcschemes/: shift_and (standalone executable).xcscheme
src/: automata.rs  cpu.rs  gpu.rs  lib.rs  main.rs  metal_strategy.rs  regex.rs  shift_and_dist.rs  shift_and_dist_gpu.rs  shift_and_opt.rs
